--- a/random.html
+++ b/random.html
@@ -20,9 +20,8 @@
 				<li>UMSI</li>
 			</ul>
 		</nav>
+		<h1>Random Page</h1>
 	</header>
-	
-	<h1>Random Page</h1>
 
 	<p>Make sure you are doing the readings from the <a href = "www.w3schools.com/html/">W3 Schools HTML 
 		tutorial</a> as well as the readings from Shay Howe's 
@@ -31,7 +30,7 @@
 	<p>Using the Piazza site is another great way to stay on top of your classwork</p>
 
 	<footer>
-		<p>Colleen van Lent copy 2023</p>
+		<p>Colleen van Lent &copy; 2023</p>
 	</footer>
 </body>
 </html>
